--- a/settings/etc/i3blocks.conf
+++ b/settings/etc/i3blocks.conf
@@ -6,8 +6,8 @@ separator_block_width=35
 
 [disk]
 command=$I3BLOCKS_CONTRIB/disk/disk
-label= 
-SHORT_LABEL= 
+label=💾 
+SHORT_LABEL=💾 
 #DIR=$HOME
 ALERT_LOW=10
 interval=30
@@ -21,11 +21,11 @@ signal=1
 ##exposed format variables: ${SYMB}, ${VOL}, ${INDEX}, ${NAME}
 #LONG_FORMAT="${SYMB} ${VOL}% [${INDEX}:${NAME}]"
 #SHORT_FORMAT="${SYMB} ${VOL}% [${INDEX}]"
-AUDIO_HIGH_SYMBOL=
+AUDIO_HIGH_SYMBOL=🔊
 #AUDIO_MED_THRESH=50
-AUDIO_MED_SYMBOL=
+AUDIO_MED_SYMBOL=🔉
 #AUDIO_LOW_THRESH=0
-AUDIO_LOW_SYMBOL=
+AUDIO_LOW_SYMBOL=🔈
 #AUDIO_DELTA=5
 #DEFAULT_COLOR="#ffffff"
 #MUTED_COLOR="#a0a0a0"
@@ -34,36 +34,34 @@ AUDIO_LOW_SYMBOL=
 ## SUBSCRIBE=1 requires interval=persist and always uses LONG_FORMAT
 #SUBSCRIBE=0
 
-[bandwidth]
-command=$I3BLOCKS_CONTRIB/bandwidth2/bandwidth2 
-interval=persist
-markup=pango
-label= 
-DECIMALS=1
+#[data-useage]
+#command=$I3BLOCKS_CONTRIB/data-useage/data-useage
+#interval=30
+#label= 
 
 [ip]
 command=$I3BLOCKS_CONTRIB/ip/ip
 interval=30
-label= 
-SHORT_LABEL= 
+label=📡 
+SHORT_LABEL=📡 
 
 [arch-update]
 command=$I3BLOCKS_CONTRIB/arch-update/arch-update
 interval=1
 markup=pango
-label= 
+label=📥 
 
 [memory]
 command=$I3BLOCKS_CONTRIB/memory/memory
 interval=10
-label= 
-SHORT_LABEL= 
+label=🐏 
+SHORT_LABEL=🐏 
 
 [cpu_usage]
 command=$I3BLOCKS_CONTRIB/cpu_usage/cpu_usage
 interval=1
-label= 
-SHORT_LABEL= 
+label=🐧 
+SHORT_LABEL=🐧 
 T_WARN=50
 T_CRIT=80
 DECIMALS=1
@@ -72,8 +70,8 @@ DECIMALS=1
 command=$I3BLOCKS_CONTRIB/cpu_temp/cpu_temp
 interval=1
 markup=pango
-label=
-SHORT_LABEL=
+label=🤒
+SHORT_LABEL=🤒
 USEAVERAGE=1
 
 [gpu-load]
@@ -85,9 +83,9 @@ SHORT_LABEL=
 [gpu-temp]
 command=$I3BLOCKS_CONTRIB/gpu_temp/gpu_temp
 interval=10
-label= 
-SHORT_LABEL= 
+label=🤒 
+SHORT_LABEL=🤒 
 
 [time]
-command=date '+ %a %d/%m/%y - %H:%M'
+command=date '+🕑 %a %d/%m/%y - %H:%M'
 interval=30
